Fixed button not displaying on mobile device

--- a/css styles/mobileStyleSheet.css
+++ b/css styles/mobileStyleSheet.css
@@ -1,8 +1,10 @@
-@media only screen and (max-width : 41.4rem){
+@media only screen and (max-width : 320px){
     #container {
         /* background-color: brown; */
         z-index: 99;
         /* color: brown; */
+        min-height: 100%;
+        overflow: auto;
 
     }
 
@@ -34,7 +36,7 @@
 
     #user-input{
         height: 100%;
-        width: 28.8rem;
+        width: 25.5rem;
         /* left: calc(50% - 288px/2); */
         /* margin: auto; */
         padding: 0 1.6rem 0 1.6rem;
@@ -47,9 +49,21 @@
         display: none;
     }
 
+   #outputDiv{
+    position: absolute;
+    font-weight: 500;
+    font-size: 2.0rem;
+    line-height: 2.7rem;
+    margin: 13rem 0 0 0;
+    color: #FFFFFF;
+    width: 100%;
+    text-align: center;
+    }
+
     #mobileBtn{
         display: block;
         background: #00B7FF;
+        position: absolute;
         border-radius: 4px;
         width: 28.8rem;
         height: 4.0rem;
@@ -58,11 +72,18 @@
         font-weight: 600;
         font-size: 1.6rem;
         line-height: 2.2rem;
+        /* z-index: 5; */
+        margin: 1rem auto 1rem auto
+        /* bottom: 6rem */
 
     }
 
     .btnContainer{
-        margin: 6rem auto 0 auto;
+        margin: 1rem auto 1rem auto;
+        /* overflow: hidden; */
+        /* background-color: red; */
+        /* z-index: 99; */
+        height: 10rem
     }
 
 }
